--- a/eventi/style.css
+++ b/eventi/style.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #fff;
     font-family: "Roboto", sans-serif;
 }
 
@@ -15,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url(/bg.jpg);
+    background-image: url(/bg4.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
