--- a/eventi/style.css
+++ b/eventi/style.css
@@ -86,3 +86,15 @@
 .event-info p {
     color: #555; /* Colore del testo descrittivo */
 }
+
+@media (max-width: 768px) {
+    .title h1 {
+        font-size: 2.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .title h1 {
+        font-size: 2rem;
+    }
+}
