--- a/menu/style.css
+++ b/menu/style.css
@@ -132,6 +132,9 @@ section ul li.active {
     .title h1 {
         font-size: 2.5rem;
     }
+    .product .itemBox {
+        width: 100%;
+    }
 }
 
 @media (max-width: 480px) {
