--- a/menu/style.css
+++ b/menu/style.css
@@ -135,6 +135,9 @@ section ul li.active {
     .product .itemBox {
         width: 80%;
     }
+    section {
+        margin: 0;
+    }
 }
 
 @media (max-width: 480px) {
