--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ label.logo a:hover {
     justify-content: center;
     flex-direction: column;
     text-align: center;
-    background: url("/immagini/Mh1.jpg");
+    background: url("/immagini/Mh1.jpeg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
