--- a/shop/style.css
+++ b/shop/style.css
@@ -23,7 +23,7 @@ body {
     width: 100%;
     padding: 100px 0;
     text-align: center;
-    background-image: url(/immagini/bg.jpg);
+    background-image: url();
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
