--- a/style.css
+++ b/style.css
@@ -168,12 +168,12 @@ label.logo a:hover {
     justify-content: center;
     flex-direction: column;
     text-align: center;
-    background: url("./immagini/mh1.jpeg");
+    background: url("./immagini/mh1.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     color: #e3e1e1;
-    transition: opacity 0.5s ease; /* Aggiungi la transizione per la dissolvenza */
+    transition: opacity 0.5s ease;
 }
 
 .home::before {
