--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ label.logo a:hover {
 }
 
 #servizio2 .immagineS {
-    background-image: url("./immagini/bg2.jpg");
+    background-image: url("./immagini/mh2.jpg");
 }
 
 #servizio3 .immagineS {
