--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ label.logo a:hover {
 }
 
 #servizio1 .immagineS {
-    background-image: url("./immagini/bg.jpg");
+    background-image: url("./immagini/shop.jpg");
 }
 
 #servizio2 .immagineS {
