--- a/eventi/style.css
+++ b/eventi/style.css
@@ -20,7 +20,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url(/immagini/bg4.jpg);
+    background-image: url(/immagini/Eventi.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
