--- a/style.css
+++ b/style.css
@@ -381,7 +381,7 @@ label.logo a:hover {
 }
 
 #servizio3 .immagineS {
-    background-image: url("./immagini/bg4.jpg");
+    background-image: url("./immagini/Eventi.png");
 }
 
 .s .titoloS {
